# 1brc

./: calculate_average_msf.sh  calculate_average_msfgo.sh  calculate_average_msfzig.sh  evaluate-msf.sh  github_users.txt  msf.run.sh  prepare_msf.sh  prepare_msfgo.sh  prepare_msfrust.sh  prepare_msfzig.sh
src/main/go/msf/: Makefile  aggregator.go  aggregator_test.go  go.mod  main.go  measurements-bench.txt  models.go  models_test.go  msf1brc  parallel.go  parallel_test.go
src/main/rust/msf/: Cargo.toml  Makefile
src/main/rust/msf/msf1brc/: Cargo.toml
src/main/rust/msf/msf1brc/src/: aggregator.rs  benchmark.rs  main.rs
src/main/rust/msf/src/: aggregator.rs  main.rs  parallel.rs
src/main/zig/msf/: Makefile  build.zig  build.zig.zon
src/main/zig/msf/src/: aggregator.zig  main.zig  root.zig
src/test/resources/samples/: measurements.bench
