[package]
name = "msf1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
crossbeam = "0.8.1"
log = "0.4"

[dev-dependencies]
env_logger = "*"