[package]
name = "msf1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[profile.bench]
debug = true
opt-level = 3

[dependencies]
ahash = "0.8.11"
crossbeam = "0.8.1"
log = "0.4"
[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

[dev-dependencies]
env_logger = "*"

